Migration to PostgreSQL and improvements
- Migrated from file storage to PostgreSQL

- Added JPA Entity classes and Repositories

- Updated services to use database

- Added PostgreSQL setup script and documentation

- Added FEATURE_PROPOSALS.md with improvement suggestions

- Fixed null safety checks

- Removed unused files and endpoints